--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -217,7 +217,7 @@ jobs:
           pip install numpy
           pip install mediapy
           conda install ffmpeg
-          pip install -e .
+          pip install metadrive-simulator
           python -m metadrive.examples.profile_metadrive
 
 
